[gd_scene load_steps=2 format=3 uid="uid://vq0tanac731t"]

[ext_resource type="Script" path="res://src/components/filtered_list/filtered_list.gd" id="1"]

[node name="FilteredList" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 0
script = ExtResource("1")

[node name="Filter" type="LineEdit" parent="."]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
placeholder_text = "Type to filter..."
caret_blink = true
caret_blink_interval = 0.5

[node name="List" type="ItemList" parent="."]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0

[node name="Delay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="gui_input" from="Filter" to="." method="_on_filter_gui_input"]
[connection signal="text_changed" from="Filter" to="." method="_on_filter_text_changed"]
[connection signal="text_submitted" from="Filter" to="." method="_submit_selection" unbinds=1]
[connection signal="item_activated" from="List" to="." method="_submit_selection" unbinds=1]
[connection signal="timeout" from="Delay" to="." method="_on_delay_timeout"]
